# foodfetch

./: Cargo.toml  README.md  build.rs  flake.nix
src/: ascii.rs  cli.rs  main.rs  recipe.rs
src/data/: meal_cache.json
