[package]
name = "foodfetch"
version = "0.1.0"
edition = "2024"
authors = ["Noah <pro@noahcode.dev>"]
license = "MIT"
description = "Foodfetch is a lightweight neofetch-like command-line tool designed for to get recipe"
repository = "https://github.com/noahfraiture/foodfetch"
readme = "README.md"
keywords = ["neofetch", "fetch", "cli", "food", "recipe"]
categories = ["programming"]


[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
image = "0.25.5"
reqwest = {version = "0.12.15", features = ["json", "blocking"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
term_size = "0.3.2"
